# AIproject

./: README.md
Back/: main.py  pyproject.toml
Back/Colab/: modelos_desarollo_de_proyectos_de_IA.ipynb
Back/api/controllers/: link_controller.py
Back/app/models/: link_model.py  ml.py
Back/app/services/: link_service.py
Back/utils/: extract_text_normal.py  extract_text_optional.py  translator.py
LinkScribeFront/: index.html  package-lock.json  package.json
LinkScribeFront/src/: App.css  App.jsx
LinkScribeFront/src/services/: serivices.js
